--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,14 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "*",
-      "use": "@vercel/static",
+      "use": "@vercel/static-build",
       "config": {
-        "distDir": "_site"
+        "distDir": "_site",
+        "installCommand": "apt-get update && apt-get install -y wget && wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.4.550/quarto-1.4.550-linux-amd64.deb && dpkg -i quarto-1.4.550-linux-amd64.deb",
+        "buildCommand": "quarto render"
       }
     }
-  ],
-  "build": {
-    "env": {
-      "QUARTO_VERSION": "1.4.550"
-    },
-    "command": "apt-get update && apt-get install -y wget && wget https://github.com/quarto-dev/quarto-cli/releases/download/v${QUARTO_VERSION}/quarto-${QUARTO_VERSION}-linux-amd64.deb && dpkg -i quarto-${QUARTO_VERSION}-linux-amd64.deb && quarto render"
-  }
+  ]
 }
