--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ website:
   description: "A blog built with Quarto"
   site-url: https://your-website-url.example.com # you must change this appropriately for RSS feeds to work properly
   title: "kikkupico"
+  search: false
   navbar:
     right:
       - about.qmd
@@ -15,8 +16,7 @@ website:
         href: https://www.linkedin.com/in/ramakrishnan-veeraragavan-725797205/
 format:
   html:
-    theme: theme.scss
-    css: styles.css
+    theme: litera
 
 
 
